# EmotivSdk

./: CHANGELOG.md  CMakeLists.txt  README.md  SDK_LICENSE_ACTIVATION.md
doc/: Connecting on Ubuntu and Debian.md  Ubuntu BTLE with BlueZ.md
doc/api_doc/: _emotiv_cloud_client_8h.html  _emotiv_cloud_client_8h_source.html  _facial_expression_detection_8h.html  _facial_expression_detection_8h_source.html  _i_emo_state_d_l_l_8h.html  _i_emo_state_d_l_l_8h_source.html  _iedk_8h.html  _iedk_8h_source.html  _iedk_error_code_8h.html  _iedk_error_code_8h_source.html  _mental_command_detection_8h.html  _mental_command_detection_8h_source.html  annotated.html  classes.html  dir_1c61ee67227cbc16aed1acf03041a38e.html  dir_36b1695acbd8e4c146b302e6ad3c297e.html  dir_aa394cd1d9abb8ffe941d9aaafca8d03.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_t.html  globals_type.html  index.hhc  index.hhk  index.hhp  (+7 more)
examples/Android/FFTSample/: .project
examples/Android/FFTSample/app/: build.gradle
examples/Android/FacialExpression/app/: build.gradle
examples/Android/MentalCommand/app/: build.gradle
examples/Android/ProfileCloudExample/: .project  AndroidManifest.xml
examples/Android/ProfileCloudExample/app/: build.gradle
examples/Android/motiondatalogger/app/: build.gradle
examples/C#/: DotNetEmotivSDK-vs2010.sln  DotNetEmotivSDK.sln
examples/C#/AverageBandPowers/: AverageBandPowers.csproj  Program.cs
examples/C#/DotNetEmotivSDK/: DotNetEmotivSDK-vs2010.csproj  DotNetEmotivSDK.csproj  EmoState.cs  EmotivCloudClient.cs
examples/C#/EEG_Data_Logger/: EEG_Data_Logger.cs
examples/C#/EmoStateLogger/: EmoStateLogger.csproj  Program.cs
examples/C#/HeadsetInformationLogger/: HeadsetInformationLogger.csproj  Program.cs
examples/C#/MentalCommandWithCloudProfile/: MentalCommandWithCloudProfile.csproj  Program.cs
examples/C#/MultiDongles/: MultiDongles-vs2010.csproj  Program.cs
examples/C#/SavingAndLoadingProfileCloud/: Program.cs  SavingAndLoadingProfileCloud.csproj
examples/C++/: Build_example_C++_MacOS.txt  EmoTutorials-vs2010.sln  EmoTutorials.sln
examples/C++/ActivateLicense/: ActivateLicense.cpp  CMakeLists.txt
examples/C++/AverageBandPowers/: AverageBandPowers.vcxproj  CMakeLists.txt  main.cpp
examples/C++/EEGLogger/: CMakeLists.txt  EEGLogger.csv  main.cpp
examples/C++/EmoStateLogger/: CMakeLists.txt  EmoStateLogger.pro  EmoStateLogger.vcxproj  main.cpp
examples/C++/FacialExpressionDemo/: CMakeLists.txt  FacialExpressionDemo-vs2010.vcxproj  FacialExpressionDemo.cpp  FacialExpressionDemo.pro  Socket.cpp  Socket.h
examples/C++/FacialExpressionDemo/BlueAvatar/BlueAvatar.app/Contents/: Info.plist
examples/C++/FacialExpressionDemo/BlueAvatar/BlueAvatar.app/Contents/MacOS/: BlueAvatar
examples/C++/FacialExpressionDemo/BlueAvatar/BlueAvatar.app/Contents/Resources/: emotiv.icns
examples/C++/GyroData/: CMakeLists.txt  GyroData-vs2010.vcxproj  GyroData.pro  GyroData.vcxproj  main.cpp
examples/C++/HeadsetInformationLogger/: CMakeLists.txt  HeadsetInformationLogger.vcxproj  main.cpp
examples/C++/MentalCommandDemo/: CMakeLists.txt  MentalCommandDemo-vs2010.vcxproj  MentalCommandDemo.cpp  MentalCommandDemo.pro  Socket.cpp  Socket.h
examples/C++/MentalCommandDemo/EmoCube/EmoCube.app/Contents/: Info.plist
examples/C++/MentalCommandDemo/EmoCube/EmoCube.app/Contents/MacOS/: EmoCube
examples/C++/MentalCommandWithCloudProfile/: CMakeLists.txt  MentalCommandWithCloudProfile.cpp
examples/C++/MentalCommandWithLocalProfile/: CMakeLists.txt  MentalCommandWithLocalProfile.cpp  MentalCommandWithLocalProfile.vcxproj
examples/C++/MotionDataLogger/: CMakeLists.txt  MotionDataLogger.vcxproj  main.cpp
examples/C++/MultiDongleConnection/: CMakeLists.txt  MultiDongleConnection-vs2010.vcxproj  MultiDongleConnection.pro  main.cpp
examples/C++/MultiDongleEEGLogger/: CMakeLists.txt  main.cpp
examples/C++/MultilChannelEEGLogger/: CMakeLists.txt  main.cpp
examples/C++/PerformanceMetricsDemo/: CMakeLists.txt  PerformanceMetricsDemo.cpp
examples/C++/ProfileManagement/: CMakeLists.txt  ExternalProfileManager.cpp  ExternalProfileManager.h  ProfileControl.cpp  ProfileControl.h  ProfileManagement.cpp  ProfileManagement.pro  ProfileManagement.vcxproj
examples/C++/SavingAndLoadingProfileCloud/: CMakeLists.txt  SavingAndLoadingProfileCloud.vcxproj  main.cpp
examples/C++/qt-project/: GyroData.pro  deployment.pri  examples.pro
examples/Python/: ActivateLicense.py  AverageBandPowers.py  HeadsetInformationLogger.py  MentalCommandWithCloudProfile.py  MotionDataLogger.py  MultiDongleConnection.py  SavingAndLoadingProfileCloud.py  emostate_logger.py
examples/Python/Arduino/: Insight.py  insight_to_arduino.py
examples/Unity/RollingBall/: RollingBall.userprefs
examples/c++/: EmoTutorials.sln
examples_basic/C#/DotNetEmotivSDK/: EmoEngine.cs
examples_basic/C#/MotionDataLogger/: Program.cs
examples_extra_prime/C#/EEG_Data_Logger/: EEG_Data_Logger.cs
examples_extra_prime/C++/: EmoTutorials.sln
examples_extra_prime/C++/EEGLogger/: main.cpp
examples_extra_prime/C++/PerformanceMetricsDemo/: PerformanceMetricsDemo.cpp
include/: EmotivCloudClient.h  FacialExpressionDetection.h  IEmoStateDLL.h  Iedk.h  IedkErrorCode.h
include/C#/: EdkDll.cs  EmoEngine.cs  EmotivCloudClient.cs
lib/iOS/edk_ios.framework/: Info.plist
lib/win32/: edk.lib
lib/win64/: edk.lib
premium_examples/C++/: EmoTutorials-vs2010.sln
premium_examples/C++/EEGLogger/: EEGLogger-vs2010.vcxproj  main.cpp
premium_examples/C++/EmoStateAndEEGLogger/: EmoStateAndEEGLogger-vs2010.vcxproj  EmoStateAndEEGLogger.pro  main.cpp
premium_examples/C++/MultiDongleEEGLogger/: main.cpp
premium_examples/C++/MultilChannelEEGLogger/: main.cpp
premium_examples/Python/: eeg_logger.py
tools/: README.md
(+54 files in other folders)
